--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(tests_SRC
     ${CMAKE_CURRENT_LIST_DIR}/test_matrixarea.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_rsa.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_sha1.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_wildcard_tree.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_xtea.cpp
     )
 
