--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ foreach(test_src ${tests_SRC})
     get_filename_component(test_name ${test_src} NAME_WE)
     add_executable(${test_name} ${test_src})
     target_link_libraries(${test_name} PRIVATE tfslib Boost::unit_test_framework)
+    target_compile_options(${test_name} PRIVATE -Wno-unused-result)
 
     add_test(NAME ${test_name} COMMAND ${test_name})
 endforeach()
