--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ set(tests_SRC
     ${CMAKE_CURRENT_LIST_DIR}/test_base64.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_generate_token.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_matrixarea.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_quadtree.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_rsa.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_sha1.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_xtea.cpp
